fixup: fix text wrapping

--- a/trallo.css
+++ b/trallo.css
@@ -24,8 +24,6 @@ h2 {
 h4 {
     font-family: Arial;
     color: black;
-    line-height: 0;
-    word-wrap: break-word;
 }
 h5 {
     font-family: Arial;
